# Face_dectector

./: .env.example  .env.production.example  .env.staging.example  .gitignore  .trivyignore  README.md  changes-ready-to-apply.patch  docker-compose.ci-override.yml  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.edge.yml  docker-compose.ghcr.yml  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  image-catalog.json  pending-check-smoke.txt
aws/: github-oidc-setup.md  github-oidc-trust-policy-sandbox.json  github-oidc-trust-policy-staging.json  github-oidc-trust-policy-workflow-rd.json  iam-policy-face-detector.json  iam-policy-workflow-rd.json
backend/: Dockerfile  alembic.ini  pytest.ini  requirements-ci.txt  requirements.txt
docs/: api-contract.md  api-contract.yml  branch-protection-solo-maintainer.md  (+5 more)
edge-client/: .dockerignore  .env.example  .env.production.example  .env.staging.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
edge-client/core/: camera.py  face_detector.py  hardware.py
edge-client/src/edge_client/: __init__.py  __main__.py  app.py  config.py
edge-client/src/edge_client/clients/: __init__.py  backend.py
edge-client/src/edge_client/hardware/: __init__.py  camera.py
edge-client/src/edge_client/ui/: __init__.py  opencv_display.py  web_kiosk.py
edge-client/src/edge_client/ui/static/: kiosk.css
edge-client/src/edge_client/vision/: __init__.py  face_detector.py
edge-client/tests/: conftest.py  test_config.py  test_display.py  test_kiosk_web.py  test_main.py
edge-client/ui/: display.py
(+207 files in other folders)
